--- a/src/shotgunEventDaemon.conf.example
+++ b/src/shotgunEventDaemon.conf.example
@@ -14,7 +14,7 @@ pidFile: /var/log/shotgunEventDaemon/shotgunEventDaemon.pid
 eventIdFile: /var/log/shotgunEventDaemon/shotgunEventDaemon.id
 
 # The logging mode to operate in:
-# 0 = all log message in the main log file
+# 0 = all log messages in the main log file
 # 1 = one main file for the engine, one file per plugin
 logMode: 1
 
